--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.hibernate.show-sql=true
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=postgres
 
 spring.datasource.initialization-mode=always
 spring.datasource.initialize=true
