--- a/pom.xml
+++ b/pom.xml
@@ -126,7 +126,11 @@
             <version>5.4.17.Final</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>net.masterthought</groupId>
+            <artifactId>cucumber-reporting</artifactId>
+            <version>5.3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
