--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 language: java
 
-jdk:
-  - oraclejdk8
+jdk: oraclejdk8
 
-addons:
-  apt:
-    packages:
-      - oracle-java8-installer
+install: true
+
+script: ./mvnw clean install
