--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,4 +31,11 @@ spring:
 ---
 spring:
   profiles: prod
-
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    tomcat:
+      max-active: 10
+      max-idle: 5
+      min-idle: 2
+      initial-size: 5
+      remove-abandoned: true
