--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
@@ -8,7 +8,4 @@ spring.datasource.password=postgres
 
 spring.datasource.initialization-mode=always
 spring.datasource.initialize=true
-spring.datasource.schema=classpath:/schema.sql
 spring.datasource.continue-on-error=true
-
-spring.profiles.active=web
