--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -5,3 +5,10 @@ spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
+spring.datasource.initialization-mode=always
+spring.datasource.initialize=true
+spring.datasource.continue-on-error=true
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
