Agrego chequedo de asignacion de tareas antes de cargar horas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.password=postgres
 spring.datasource.initialization-mode=always
 spring.datasource.initialize=true
 spring.datasource.continue-on-error=true
+
+proyectos.uri: http://mapache-proyectos.herokuapp.com
